--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,26 @@ button:focus-visible {
 }
 
 
+@media (max-width: 800px) {
+  .productos {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .productCard {
+    width: 80%;
+    margin: 20px 0;
+  }
+
+  #añadir{
+    margin-top: -3px;
+  }
+}
+
+
+
+
+
 
 
 
